--- a/catalog.tex
+++ b/catalog.tex
@@ -1,86 +1,6 @@
 
 \section{Seismic Catalog}
 
-\input{composition}
+\input{compilation}
 
 \input{completeness}
-
-
-
-
-
-
-% *********************************************************************************************************************
-% *********************************************************************************************************************
-
-% ***** In addition, \citet{Zare2014} provided the catalog completeness for different magnitude ranges using the cumulative frequency-magnitude distribution of \citet{Gutenberg1944} and \citet{richter1958}, and the frequency magnitude distribution obtained using ZMAP \citep{Wiemer2001}, and found these methods to yield consistent results. 
-
-% **** Our analysis of this dataset indicated that the catalog satisfies completeness from 2005 onward. 
-
-% *********************************************************************************************************************
-% *********************************************************************************************************************
-
-% \citet{Zare2014} uses both historical data prior to 1900 and instrumental data up until 2006, including events from Afghanistan, Pakis\-tan, Saudi Arabia, the Caucasus and parts of Turkey, in addition to the Alborz-Azerbaijan, Zagros, central Iran, Kopeh-Dagh and Makran seismic zones. 
-
-% All events in this catalog are converted to $M_w$ using relationships derived by the authors and by \citet{Escordilis_2006_JS}; and declustered using various methods \citep{Gardner1974, Reasenberg1985, Uhrhammer_1986_EN}. 
-
-% This catalog is particularly relevant because it is published as part of the current effort by the Global Earthquake Model (GEM) partnership and the Earthquake Model of the Middle East (EMME) project.
-
-% In this study we adopt the catalog compiled by \citet{Zare2014} for both historical and instrumental earthquakes. This catalog includes events of magnitude $M_w \geq 4$ from 550 A.d.~to December 1999. 
-
-% We complemented it with events $M \geq 3$ occurred between January 2000 and December 2015 obtained from the IIEES database. 
-
-% The result of our compilation is shown in Fig.~\ref{fig:catalog}, which includes maps for historical and instrumental seismicity. 
-% The following sections provide additional details about magnitude conversion and de\-clustering of the events in our combined catalog.
-
-% The portion of the catalog obtained from IIEES for $M \geq 3$ earthquakes between 2000 and 2015 contained event reports that use different magnitude scales. We converted all events with magnitudes in $M_L$, $M_s$, and $mb$ scales to $M_w$ using the same conversion relationships used by \citet{Zare2014}, which allowed us to preserve compatibility with the historical and instrumental seismicity catalog adopted from the same work of \citet{Zare2014}. 
-
-% Last but not least important, we declustered the catalog prior to using it in the assessment of seismic hazard for the region of interest. This entailed the removal of foreshocks and aftershocks from the catalog to adjust the dataset to include only those events in agreement with a Poissonian model, which is a well-accepted model for seismic sources. Out of the original 7,478 earthquakes in the assembled catalog for the seismic regions of Azerbaijan, Alborz and Kopeh-Dagh, we removed 605 foreshocks and 2,917 aftershocks. The resulting final set of events in the catalog compiled for this study is shown in Fig.~\ref{fig:catalog}, which includes maps for both historical and instrumental seismicity.
-
-% *********************************************************************************************************************
-% *********************************************************************************************************************
-
-% Naeem's original Text
-% ---------------------
-
-% \subsection{Historical  and Instrumental Seismicity}
-
-% Uniform earthquake catalog is the most important factor in seismic hazard analysis of a region.  Different studies have been conducted in order to prepare a uniform catalog for Iranian Earthquake. Historical event interpretation and different magnitude conversion relationships are some of the factors which make all these catalogs different. Among different sources \citet{Ambraseys2005}, \citet{Berberian1994}, and \citet{moinfar1994} are some of the main sources for Iranian earthquake catalog. These catalogs contain historical and instrumental earthquakes that have been reported in literature and national and international networks. According to \citet{Ambraseys2005}, there are some scattered indication of earthquake effects  back to third millinuim BC. However, adequate documentary coverage of individual events begins from seventh century A.D. \citet{Mirzaei1997} provided a comprehensive list of studies that have been done in compilation a uniform catalog for Iranian earthquakes in order to prepare a uniform catalog of earthquake (all earthquakes are converted to surface wave magnitude Ms) for seismic hazard assessment in Iran. The catalog is covering the period of 4th century B.C. through 1994. The instrumental data is achievable from three national agencies including IIEES, International Institute of Earthquake Engineering and Seismology; IRSC, The Iranian seismological center, University of Tehran; and BHRC, Building and Housing Research Center (Iran Strong Motion Network) (For more information about these networks see \citet{Karimiparidari2013}).
-
-% Many most of attenuation relationship use  moment magnitude $M_w$ as an input for the equation \citep{Douglas2011}. Moment magnitude is not suffering from saturation and has physical meaning \citep{Kanamori1977}. Due to mentioned reasons Mw has become a most appropriate magnitude scale in recent studies. 
-
-%  \citet{Karimiparidari2013}compiled a uniform earthquake catalog for Iran and adjacent areas, using international and national databanks until April 2010.  They developed relationships between moment magnitude and other magnitude based on orthogonal regression.  They removed the dependent events (aftershocks and foreshocks) using the procedure by \citet{Gardner1974}. The catalog of events with magnitude equal and above Mw 5.5 is provided. 
-% \citet{Shahvar2013} presented a unified and homogeneous catalog for the Iranian plateau $(M_w >= 4)$, created by merging data from two local catalogs and seven international agencies for 1900-2011 period. They used orthogonal regression method \citep{Castellaro2006} to derive magnitude conversion relation. By removing foreshocks and aftershocks according to the procedure detailed in Uhrhammer(1986), they also provided declustered version of the catalog.
-
-% The recent unified catalog for Middle East region is published as a part of Global Earth Model (GEM) and the Earthquake Model of the Middle East (EMME) project by \citet{Zare2014}. They used all historical (pre-1900), early and modern instrumental events up to 2006. The catalog contains data from Alborz-Azerbaijan, Afghanistan-Pakistan, Saudi Arabia, Caucasus, Central Iran, Kopeh-Dagh, Makran, Zagros, and part of Turkey. The magnitude of all events are converted to Mw through relationships which is derived at previous studies or newly derived at the study relationships. They declustered data through different methods including \citet{Gardner1974}, Uhrhammer(1986), \citet{Reasenberg1985}, and Gruenthal. \citet{Zare2014} provided the catalog completeness for different magnitude range using  the cumulative frequency-magnitude distribution of  \citet{Gutenberg1944} and \citet{richter1958}, and frequency magnitude distributaion of ZMAP \citep{Wiemer2001} software. The methods confirms the results of each other. 
-
-% In this study we consider earthquakes with Mw equal and greater than 3. Earthquakes with magnitude 3 are not considered as a structural threat, however, the epicenter of earthquakes with magnitude $M_w 3$ are a  susceptible location for future bigger earthquakes.  According to our preliminary data processing based on IIEES data, Iranian catalog for earthquake with magnitude greater and equal 3, is complete from 2005. In order to make sure about the completeness of the catalog, we use IIEES data from 2000. We used the EMME project data provided by \citet{Zare2014} up to 2000. Fig.~\ref{fig:historical} represents the historical data (pre 1900) in the study region. 
-
-% \subsubsection{Magnitude Conversion}
-
-% The catalog of recorded earthquake from 2000-2015 which is downloaded from IIEES is reported the earthquake based on different magnitude scale. We converted the $M_L$, $M_s$, and $mb$ magnitudes through conversion relationships which is defined in \citet{Zare2014}. There also some of data which is recorded in $M_D$ (Duration magnitude). These data are reported by International Seismological Centre (ISC).  \citet{Deniz2010}, developed a set of empirical equations to convert earthquake magnitudes in $mb$, $M_D$, $M_L$ and $M_s$ scales to the $M_w$ scales using orthogonal regression procedure. They used data of earthquake that occurred in Turkey from different data centers including ISC. In this study we use the conversion equation of \citet{Deniz2010} to convert the Md to Mw. Although they defined the equation based on $M_w>=4.5$, we extrapolate the equation for lower magnitude. We believe having those earthquakes, even with small error  in magnitude is important for estimating an accurate "a" value  in Gutenberge-Richter equation.
-
-% \begin{figure*}[!ht] 
-
-% \centering
-% \includegraphics[scale=0.4]{figures/pdf/Figure2.pdf} 
-% \caption{Historical earthquakes of Iran (pre 1900). Different colors represent different year of occurrences and size of circles are proportional to the earthquake magnitude. }
-% \label{fig:historical}
-% \end{figure*}
-
-% \subsubsection{Declustering}
-
-% It is generally assumed that the seismicity of each tectonic seismic source follows a Poissonian occurrence process. Therefore, in order to accomplish this, we declustered the earthquake catalog. In compiling the catalog of events, foreshocks and aftershocks were removed using a declustering methodology \citep{Gardner1974}. For north Iran (lon: 42-62.5, lat: 33-41), from 7478 earthquake event we removed 605 Foreshocks and 2917 aftershocks.
-% Whole data that we used for seismicity parameters of Zagros and Central Iran tectonic seismic regions are not included in these numbers. Fig.~\ref{fig:instrumental} shows the epicenter of declustered instrumental  earthquakes.
-
-% \begin{figure*}[!ht] 
-
-% \centering
-% \includegraphics[scale=0.25]{figures/pdf/Figure3.pdf} 
-% \caption{Declustered instrumental seismicity map (after 1900) of Northern Iran. The study areas are separated at longitude of 48$^{\circ}$ and 55$^{\circ}$ . } 
-% \label{fig:instrumental}
-% \end{figure*}
-
-% \subsection{Divisions}
-
-% As we discussed earlier (see the Introduction section), classifying the tectonic seismic regions has been a controversial debate. In this study we consider two seismic tectonic models. First model is according to \citet{Mirzaei1998} and \citet{Karimiparidari2013} classification, which includes Azerbaijan, Alborz, Kopek Dagh, and part of Central Iran, and Zagros, the second model is a uniform model for the whole north Iran.  
