--- a/references.bib
+++ b/references.bib
@@ -581,6 +581,18 @@
   Volume                   = {1}
 }
 
+@Article{Kafka_2000_BSSA,
+  Title                    = {Does the Spatial Distribution of Smaller Earthquakes Delineate Areas Where Larger Earthquakes Are Likely to Occur?},
+  Author                   = {Kafka, Alan L. and Levin, Shoshana Z.},
+  Journal                  = {Bulletin of the Seismological Society of America},
+  Year                     = {2000},
+  Number                   = {3},
+  Pages                    = {724--738},
+  Volume                   = {90},
+
+  Doi                      = {10.1785/0119990017}
+}
+
 @Article{Kalkan2009,
   Title                    = {Reassessment of probabilistic seismic hazard in the {M}armara region},
   Author                   = {Kalkan, Erol and G{\"u}lkan, Polat and Yilmaz, Nazan and {\c{C}}elebi, Mehmet},
