fixed size of fig 12

--- a/results.tex
+++ b/results.tex
@@ -60,7 +60,7 @@ Following the comparisons shown in Table \ref{tab:pga}, we looked into the more 
 
 \begin{figure}[t]
     \centering
-    \includegraphics[width=\columnwidth]{figures/pdf/figure-12} 
+    \includegraphics[width=0.48\textwidth]{figures/pdf/figure-12} 
     \caption{Hazard curve comparison between the models considered in this study and the results of two previous studies by \citet{Ghodrati2003} and \citet{Boostan2015} for the city of Tehran. Here, the two previous studies just mentioned are identified with the codes Gh03 and Bo15, respectively.}
     \label{fig:tehran}
 \end{figure}
