Adding Khodaverdian information
Table is updated by results of PGA from Khodaverdian article. Numbers are from the figures.

--- a/table-pga.tex
+++ b/table-pga.tex
@@ -11,7 +11,8 @@
     BC14: \citet{BHRC2014},
     Go14: \citet{Golara2014},
     Az14: \citet{Abdollahzadeh2014a},
-    Bo15: \citet{Boostan2015}.
+    Bo15: \citet{Boostan2015},
+    Kh16: \citet{Khodaverdian_2016_BSSA}.
     }
 \begin{tabular}{lccccccccc}
     \hline                                                                                                              \\[-1.6ex]
@@ -44,7 +45,9 @@
             &   2\%  &&   --        & 0.30--0.90  &   --        &   --        &   --        &             &   --        \\
     Gh08    &  10\%  &&   --        &   --        &   --        &   0.10      &   --        &             &   --        \\
             &   2\%  &&   --        &   --        &   --        &   0.20      &   --        &             &   --        \\
-    Gh03    &  10\%  &&   --        &   --        &   --        &   --        &   --        & 0.37--0.42  &   --        \\[0.6ex]
+    Gh03    &  10\%  &&   --        &   --        &   --        &   --        &   --        & 0.37--0.42  &   --        \\
+    Kh16    &  10\%  && 0.20--0.25  & 0.20--0.25  & 0.25--0.30  & 0.20--0.25  & 0.15--0.20  & 0.20--0.25  & 0.15--0.20  \\
+            &   2\%  && 0.40--0.50  & 0.40--0.50  & 0.50--0.60  & 0.40--0.50  & 0.40--0.50  & 0.40--0.50  &   --        \\[0.6ex]
     \hline                                                                                                              \\[-1.6ex]
     \multicolumn{10}{l}{\small{${}^{*}$ Used surface-wave magnitude $M_s$ 4.0 as magnitude threshold}}                  \\
     \multicolumn{10}{l}{\small{${}^{\dagger}$ Used $M_s$ 5.5 and 6.0 for Central-East and Alborz-Azerbaijan as magnitude threshold}}    
