Response letter template and reviosion format added.

--- a/main.tex
+++ b/main.tex
@@ -11,11 +11,17 @@
 
 % Packages
 \usepackage{graphicx}
-\usepackage{xcolor}
+%\usepackage{xcolor}
 \usepackage{amsmath}
 \usepackage{multirow}
 \usepackage{marvosym}
 \usepackage{textcomp}
+
+
+% Revision format added 
+\usepackage[dvipsnames]{xcolor}
+\newcommand{\myrevision}[1]{\textcolor{ForestGreen}{#1}}
+
 
 
 % Journal Name
